--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,5 +152,9 @@
     <string name="infoFontBeure">Ofereix aigua de boca a la ciutadania vianant. Totes aquestes fonts tenen en comú l\'aixeta per poder beure, sense tenir en compte la seva morfologia o material. Són aptes per al consum humà.</string>
     <string name="infoFontSingular">Ofereix aigua de boca, però, les fonts singulars acostumen a tenir un nom determinat amb una història o identitat pròpia ja sigui artística, arquitectònica o social que la fa destacar de la resta de les fonts de beure normals.</string>
     <string name="infoFontGos">Ofereix aigua de boca apta pel consum humà, però estan adaptades per beure-hi els animals, normalment en zones de lleure i places.</string>
+    <string name="grupOat">Grup de treball qualitat i sabor de l\'aigua (OAT):</string>
+    <string name="membres_oat">Beatriz Escribano, Pilar Quintanilla i Juana Martin</string>
+    <string name="agraiments">Agraïments:</string>
+    <string name="grup_agraiments">Institut Nicolau Copernic, Esther Sánchez, Catedra Unesco de Sostenibilitat de la UPC, Eva Nogueras i ajuntament de Terrassa.</string>
 
 </resources>
